// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Using lucide icon components > should add a class to the element 1`] = `
<svg
  class="lucide-icon lucide lucide-smile my-icon"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2a10 10 0 1 0 0 20 10 10 0 1 0 0-20zM8 14s1.5 2 4 2 4-2 4-2M9 9h.01M15 9h.01"
  />
  
  
</svg>
`;

exports[`Using lucide icon components > should adjust the size, stroke color and stroke width 1`] = `
<body>
  <div>
    <svg
      class="lucide-icon lucide lucide-smile"
      fill="none"
      height="48"
      stroke="red"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="4"
      viewBox="0 0 24 24"
      width="48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2a10 10 0 1 0 0 20 10 10 0 1 0 0-20zM8 14s1.5 2 4 2 4-2 4-2M9 9h.01M15 9h.01"
      />
      
      
    </svg>
  </div>
</body>
`;

exports[`Using lucide icon components > should not scale the strokeWidth when absoluteStrokeWidth is set 1`] = `
<div>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="48"
       height="48"
       viewbox="0 0 24 24"
       fill="none"
       stroke="red"
       stroke-width="1"
       stroke-linecap="round"
       stroke-linejoin="round"
       data-testid="smile-icon"
       class="lucide-icon lucide lucide-smile"
  >
    <path d="M12 2a10 10 0 1 0 0 20 10 10 0 1 0 0-20zM8 14s1.5 2 4 2 4-2 4-2M9 9h.01M15 9h.01">
    </path>
  </svg>
</div>
`;

exports[`Using lucide icon components > should render an component 1`] = `
<body>
  <div>
    <svg
      class="lucide-icon lucide lucide-smile"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2a10 10 0 1 0 0 20 10 10 0 1 0 0-20zM8 14s1.5 2 4 2 4-2 4-2M9 9h.01M15 9h.01"
      />
      
      
    </svg>
  </div>
</body>
`;

exports[`Using lucide icon components > should render an icon slot 1`] = `
<body>
  <div>
    <svg
      class="lucide-icon lucide lucide-smile"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2a10 10 0 1 0 0 20 10 10 0 1 0 0-20zM8 14s1.5 2 4 2 4-2 4-2M9 9h.01M15 9h.01"
      />
      
      
      <text>
        Test
      </text>
    </svg>
  </div>
</body>
`;
